--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="1280" />
     <meta property="og:image:height" content="800" />
-    <meta property="og:url" content="https://artpurpz.carrd.co" />
+    <meta property="og:url" content="https://artfight.impurpz.xyz" />
     <meta property="twitter:card" content="summary_large_image" />
-    <link rel="canonical" href="https://artpurpz.carrd.co" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+    <link rel="canonical" href="https://artfight.impurpz.xyz" />
     <link
         href="https://fonts.googleapis.com/css2?display=swap&family=Major+Mono+Display:ital,wght@0,400;1,400&family=Dela+Gothic+One:ital,wght@0,400;1,400"
         rel="stylesheet" type="text/css" />
